@@ -30,7 +30,6 @@ import cz.cvut.kbss.termit.exception.ResourceExistsException;
 import cz.cvut.kbss.termit.exception.UnsupportedOperationException;
 import cz.cvut.kbss.termit.exception.ValidationException;
 import cz.cvut.kbss.termit.model.CustomAttribute;
-import cz.cvut.kbss.termit.model.Glossary;
 import cz.cvut.kbss.termit.model.Term;
 import cz.cvut.kbss.termit.model.UserAccount;
 import cz.cvut.kbss.termit.model.Vocabulary;
@@ -53,6 +52,7 @@ import java.net.URI;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -64,6 +64,8 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.emptyCollectionOf;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.hasKey;
+import static org.hamcrest.Matchers.hasItems;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.Matchers.startsWith;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -116,11 +118,11 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
 
         transactional(() -> sut.addRootTermToVocabulary(term, vocabulary));
 
-        transactional(() -> {
+        readOnlyTransactional(() -> {
             // Need to put in transaction, otherwise EM delegate is closed after find and lazy loading of glossary terms does not work
             final Vocabulary result = em.find(Vocabulary.class, vocabulary.getUri());
             assertNotNull(result);
-            assertTrue(result.getGlossary().getRootTerms().contains(term.getUri()));
+            assertTrue(result.getRootTerms().contains(term.getUri()));
         });
     }
 
@@ -171,26 +173,25 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     }
 
     @Test
-    void addRootTermDoesNotRewriteExistingTermsInGlossary() {
+    void addRootTermDoesNotRewriteExistingTermsInVocabulary() {
         final Term existing = Generator.generateTermWithId();
         final Term newOne = Generator.generateTermWithId();
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(existing);
+            vocabulary.addRootTerm(existing);
             em.persist(existing, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
 
         // Simulate lazily loaded detached root terms
-        vocabulary.getGlossary().setRootTerms(null);
+        vocabulary.setRootTerms(null);
 
         transactional(() -> sut.addRootTermToVocabulary(newOne, vocabulary));
 
         // Run in transaction to allow lazy fetch of root terms
-        transactional(() -> {
-            final Glossary result = em.find(Glossary.class, vocabulary.getGlossary().getUri());
+        readOnlyTransactional(() -> {
+            final Vocabulary result = em.find(Vocabulary.class, vocabulary.getUri());
             assertNotNull(result);
-            assertTrue(result.getRootTerms().contains(existing.getUri()));
-            assertTrue(result.getRootTerms().contains(newOne.getUri()));
+            assertThat(result.getRootTerms(), hasItems(existing.getUri(), newOne.getUri()));
         });
     }
 
@@ -199,10 +200,9 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         final Term parent = Generator.generateTermWithId();
         // This is normally inferred
         parent.setVocabulary(vocabulary.getUri());
-        parent.setGlossary(vocabulary.getGlossary().getUri());
         final Term child = Generator.generateTermWithId();
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
+            vocabulary.addRootTerm(parent);
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary));
             em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
@@ -211,7 +211,7 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
 
         Term result = em.find(Term.class, child.getUri());
         assertNotNull(result);
-        assertEquals(Collections.singleton(parent), result.getParentTerms());
+        assertEquals(Collections.singleton(new TermInfo(parent)), result.getParentTerms());
     }
 
     @Test
@@ -219,8 +219,8 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         final Term parent = Generator.generateTermWithId();
         final Term child = Generator.generateTerm();
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
-            parent.setGlossary(vocabulary.getGlossary().getUri());
+            vocabulary.addRootTerm(parent);
+            parent.setVocabulary(vocabulary.getUri());
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary.getUri()));
             em.merge(vocabulary);
         });
@@ -238,17 +238,17 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         final Term parent = Generator.generateTermWithId();
         final Term child = Generator.generateTermWithId();
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
-            parent.setGlossary(vocabulary.getGlossary().getUri());
+            vocabulary.addRootTerm(parent);
+            parent.setVocabulary(vocabulary.getUri());
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary());
+            em.merge(vocabulary);
         });
 
         // This is normally inferred
         parent.setVocabulary(vocabulary.getUri());
         sut.addChildTerm(child, parent);
         em.getEntityManagerFactory().getCache().evictAll();
-        final Glossary result = em.find(Glossary.class, vocabulary.getGlossary().getUri());
+        final Vocabulary result = em.find(Vocabulary.class, vocabulary.getUri());
         assertEquals(1, result.getRootTerms().size());
         assertTrue(result.getRootTerms().contains(parent.getUri()));
         assertFalse(result.getRootTerms().contains(child.getUri()));
@@ -258,14 +258,12 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void addChildTermPersistsTermIntoVocabularyContext() {
         final Term parent = Generator.generateTermWithId();
-        parent.setGlossary(vocabulary.getGlossary().getUri());
-        // This is normally inferred
         parent.setVocabulary(vocabulary.getUri());
         final Term child = Generator.generateTermWithId();
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
+            vocabulary.addRootTerm(parent);
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary.getUri()));
-            em.merge(vocabulary.getGlossary());
+            em.merge(vocabulary);
         });
 
         transactional(() -> sut.addChildTerm(child, parent));
@@ -280,10 +278,10 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         final Term child = Generator.generateTerm();
         child.setUri(existing.getUri());
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
+            vocabulary.addRootTerm(parent);
             em.persist(existing);
             em.persist(parent);
-            em.merge(vocabulary.getGlossary());
+            em.merge(vocabulary);
         });
 
         assertThrows(ResourceExistsException.class, () -> sut.addChildTerm(child, parent));
@@ -292,23 +290,22 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void updateUpdatesTermWithParent() {
         final Term t = Generator.generateTermWithId();
-        vocabulary.getGlossary().addRootTerm(t);
+        vocabulary.addRootTerm(t);
         t.setVocabulary(vocabulary.getUri());
         final Term childOne = Generator.generateTermWithId();
         childOne.addParentTerm(t);
-        childOne.setGlossary(vocabulary.getGlossary().getUri());
+        childOne.setVocabulary(vocabulary.getUri());
         final Term termTwo = Generator.generateTermWithId();
-        vocabulary.getGlossary().addRootTerm(termTwo);
-        termTwo.setGlossary(vocabulary.getGlossary().getUri());
+        vocabulary.addRootTerm(termTwo);
+        termTwo.setVocabulary(vocabulary.getUri());
         transactional(() -> {
-            em.persist(childOne, descriptorFactory.termDescriptor(vocabulary));
             em.persist(t, descriptorFactory.termDescriptor(vocabulary));
             em.persist(termTwo, descriptorFactory.termDescriptor(vocabulary));
             em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(childOne, vocabulary.getUri(), em);
         });
+        transactional(() -> em.persist(childOne, descriptorFactory.termDescriptor(vocabulary)));
 
-        childOne.setParentTerms(Collections.singleton(termTwo));
+        childOne.setParentTerms(Collections.singleton(new TermInfo(termTwo)));
         final String newLabel = "new term label";
         childOne.getLabel().set(Environment.LANGUAGE, newLabel);
         // This is normally inferred
@@ -316,14 +313,14 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         transactional(() -> sut.update(childOne));
         final Term result = em.find(Term.class, childOne.getUri());
         assertEquals(newLabel, result.getLabel().get(Environment.LANGUAGE));
-        assertEquals(Collections.singleton(termTwo), result.getParentTerms());
+        assertEquals(Collections.singleton(new TermInfo(termTwo)), result.getParentTerms());
     }
 
     @Test
     void updateThrowsValidationExceptionForEmptyTermLabel() {
         final Term t = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(t);
-        vocabulary.getGlossary().addRootTerm(t);
+        vocabulary.addRootTerm(t);
+        vocabulary.addRootTerm(t);
         transactional(() -> {
             em.persist(t);
             em.merge(vocabulary);
@@ -336,52 +333,46 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void updateRemovesTermFromRootTermsWhenParentIsSetForIt() {
         final Term parent = Generator.generateTermWithId();
-        parent.setGlossary(vocabulary.getGlossary().getUri());
+        parent.setVocabulary(vocabulary.getUri());
         final Term child = Generator.generateTermWithId();
-        child.setGlossary(vocabulary.getGlossary().getUri());
+        child.setVocabulary(vocabulary.getUri());
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
-            vocabulary.getGlossary().addRootTerm(child);
+            vocabulary.addRootTerm(parent);
+            vocabulary.addRootTerm(child);
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary));
             em.persist(child, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(child, vocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
         child.addParentTerm(parent);
         // This is normally inferred
         child.setVocabulary(vocabulary.getUri());
         sut.update(child);
 
-        final Glossary result = em.find(Glossary.class, vocabulary.getGlossary().getUri(),
-                                        descriptorFactory.glossaryDescriptor(vocabulary));
-        assertTrue(result.getRootTerms().contains(parent.getUri()));
-        assertFalse(result.getRootTerms().contains(child.getUri()));
+        final Vocabulary result = em.find(Vocabulary.class, vocabulary.getUri(),
+                                          descriptorFactory.vocabularyDescriptor(vocabulary));
+        assertThat(result.getRootTerms(), hasItem(parent.getUri()));
+        assertThat(result.getRootTerms(), not(hasItem(child.getUri())));
     }
 
     @Test
     void updateAddsTermToRootTermsWhenParentIsRemovedFromIt() {
         final Term parent = Generator.generateTermWithId();
-        parent.setGlossary(vocabulary.getGlossary().getUri());
+        parent.setVocabulary(vocabulary.getUri());
         final Term child = Generator.generateTermWithId();
-        child.setGlossary(vocabulary.getGlossary().getUri());
+        child.setVocabulary(vocabulary.getUri());
         child.addParentTerm(parent);
         transactional(() -> {
-            vocabulary.getGlossary().addRootTerm(parent);
+            vocabulary.addRootTerm(parent);
             em.persist(parent, descriptorFactory.termDescriptor(vocabulary));
-            em.persist(child, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(child, vocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(parent, vocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
+        transactional(() -> em.persist(child, descriptorFactory.termDescriptor(vocabulary)));
         child.setParentTerms(null);
-        // This is normally inferred
-        child.setVocabulary(vocabulary.getUri());
         sut.update(child);
 
-        final Glossary result = em.find(Glossary.class, vocabulary.getGlossary().getUri(),
-                                        descriptorFactory.glossaryDescriptor(vocabulary));
-        assertTrue(result.getRootTerms().contains(parent.getUri()));
-        assertTrue(result.getRootTerms().contains(child.getUri()));
+        final Vocabulary result = em.find(Vocabulary.class, vocabulary.getUri(),
+                                          descriptorFactory.vocabularyDescriptor(vocabulary));
+        assertThat(result.getRootTerms(), hasItems(parent.getUri(), child.getUri()));
     }
 
     @Test
@@ -393,21 +384,20 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         sut.addChildTerm(childTerm, parentTerm);
         final Term result = em.find(Term.class, childTerm.getUri(), descriptorFactory.termDescriptor(childVocabulary));
         assertEquals(childTerm, result);
-        assertEquals(childVocabulary.getGlossary().getUri(), childTerm.getGlossary());
-        final Glossary childGlossary = em.find(Glossary.class, childVocabulary.getGlossary().getUri(),
-                                               descriptorFactory.glossaryDescriptor(childVocabulary));
-        assertThat(childGlossary.getRootTerms(), hasItem(childTerm.getUri()));
+        assertEquals(childVocabulary.getUri(), childTerm.getVocabulary());
+        final Vocabulary childVocabulary = em.find(Vocabulary.class, this.childVocabulary.getUri(),
+                                                   descriptorFactory.vocabularyDescriptor(this.childVocabulary));
+        assertThat(childVocabulary.getRootTerms(), hasItem(childTerm.getUri()));
     }
 
     private Term generateParentTermFromDifferentVocabulary() {
         final Term parentTerm = Generator.generateTermWithId();
 
         transactional(() -> {
-            parentTerm.setGlossary(vocabulary.getGlossary().getUri());
-            vocabulary.getGlossary().addRootTerm(parentTerm);
+            parentTerm.setVocabulary(vocabulary.getUri());
+            vocabulary.addRootTerm(parentTerm);
             em.persist(parentTerm, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(parentTerm, vocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
         // This is normally inferred
         parentTerm.setVocabulary(vocabulary.getUri());
@@ -433,7 +423,7 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
 
         assertThat(sut.findAllRoots(childVocabulary, Constants.DEFAULT_PAGE_SPEC, Collections
                 .emptyList()), hasItem(new TermDto(childTerm)));
-        final Glossary result = em.find(Glossary.class, childVocabulary.getGlossary().getUri());
+        final Vocabulary result = em.find(Vocabulary.class, childVocabulary.getUri());
         assertTrue(result.getRootTerms().contains(childTerm.getUri()));
     }
 
@@ -441,27 +431,23 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void updateAddsTermToGlossaryRootTermsWhenNewParentIsFromDifferentVocabulary() {
         final Term newParentTerm = generateParentTermFromDifferentVocabulary();
         final Term oldParentTerm = Generator.generateTermWithId();
-        oldParentTerm.setGlossary(childVocabulary.getGlossary().getUri());
+        oldParentTerm.setVocabulary(childVocabulary.getUri());
         final Term childTerm = Generator.generateTermWithId();
         childTerm.addParentTerm(oldParentTerm);
-        childTerm.setGlossary(childVocabulary.getGlossary().getUri());
-        transactional(() -> {
-            childVocabulary.getGlossary().addRootTerm(oldParentTerm);
-            em.persist(oldParentTerm, descriptorFactory.termDescriptor(childVocabulary));
-            em.persist(childTerm, descriptorFactory.termDescriptor(childVocabulary));
-            em.merge(childVocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(childVocabulary));
-            Generator.addTermInVocabularyRelationship(childTerm, childVocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(oldParentTerm, childVocabulary.getUri(), em);
-        });
-
-        // This is normally inferred
         childTerm.setVocabulary(childVocabulary.getUri());
+        transactional(() -> {
+            childVocabulary.addRootTerm(oldParentTerm);
+            em.persist(oldParentTerm, descriptorFactory.termDescriptor(childVocabulary));
+            em.merge(childVocabulary, descriptorFactory.vocabularyDescriptor(childVocabulary));
+        });
+        transactional(() -> em.persist(childTerm, descriptorFactory.termDescriptor(childVocabulary)));
+
         em.getEntityManagerFactory().getCache().evictAll();
-        childTerm.setExternalParentTerms(Collections.singleton(newParentTerm));
+        childTerm.setExternalParentTerms(Collections.singleton(new TermInfo(newParentTerm)));
         sut.update(childTerm);
         assertTrue(sut.findAllRoots(childVocabulary, Constants.DEFAULT_PAGE_SPEC, Collections.emptyList())
                       .contains(new TermDto(childTerm)));
-        final Glossary result = em.find(Glossary.class, childVocabulary.getGlossary().getUri());
+        final Vocabulary result = em.find(Vocabulary.class, childVocabulary.getUri());
         assertTrue(result.getRootTerms().contains(childTerm.getUri()));
     }
 
@@ -492,16 +478,14 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
         final Term term = Generator.generateTermWithId(vocabulary.getUri());
         final Term related = Generator.generateTermWithId(vocabulary.getUri());
         final Term inverseRelated = Generator.generateTermWithId(vocabulary.getUri());
-        term.setGlossary(vocabulary.getGlossary().getUri());
-        related.setGlossary(vocabulary.getGlossary().getUri());
-        vocabulary.getGlossary().addRootTerm(term);
+        term.setVocabulary(vocabulary.getUri());
+        related.setVocabulary(vocabulary.getUri());
+        vocabulary.addRootTerm(term);
         transactional(() -> {
             em.persist(related, descriptorFactory.termDescriptor(vocabulary));
             em.persist(term, descriptorFactory.termDescriptor(vocabulary));
             em.persist(inverseRelated, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(term, vocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(related, vocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             generateRelatedInverse(term, inverseRelated, SKOS.RELATED);
         });
         // Assign the term separately so that it already exists in the repository
@@ -522,14 +506,12 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void updateDeletesRelatedRelationshipFromOtherSideWhenItWasRemovedFromTargetTerm() {
         final Term term = Generator.generateTermWithId(vocabulary.getUri());
         final Term inverseRelated = Generator.generateTermWithId(vocabulary.getUri());
-        term.setGlossary(vocabulary.getGlossary().getUri());
-        vocabulary.getGlossary().addRootTerm(term);
+        term.setVocabulary(vocabulary.getUri());
+        vocabulary.addRootTerm(term);
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(vocabulary));
             em.persist(inverseRelated, descriptorFactory.termDescriptor(vocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(term, vocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(inverseRelated, vocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             generateRelatedInverse(term, inverseRelated, SKOS.RELATED);
         });
 
@@ -543,14 +525,12 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void updatesDeletesRelatedMatchRelationshipFromOtherSideWhenItWasRemovedFromTargetTerm() {
         final Term term = Generator.generateTermWithId(vocabulary.getUri());
         final Term inverseRelatedMatch = Generator.generateTermWithId(childVocabulary.getUri());
-        term.setGlossary(vocabulary.getGlossary().getUri());
-        vocabulary.getGlossary().addRootTerm(term);
+        term.setVocabulary(vocabulary.getUri());
+        vocabulary.addRootTerm(term);
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(vocabulary));
             em.persist(inverseRelatedMatch, descriptorFactory.termDescriptor(childVocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(term, vocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(inverseRelatedMatch, childVocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             generateRelatedInverse(term, inverseRelatedMatch, SKOS.RELATED_MATCH);
         });
 
@@ -564,14 +544,12 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void updateDeletesExactMatchRelationshipsFromOtherSideWhenItWasRemovedFromTargetTerm() {
         final Term term = Generator.generateTermWithId(vocabulary.getUri());
         final Term inverseExactMatch = Generator.generateTermWithId(childVocabulary.getUri());
-        term.setGlossary(vocabulary.getGlossary().getUri());
-        vocabulary.getGlossary().addRootTerm(term);
+        term.setVocabulary(vocabulary.getUri());
+        vocabulary.addRootTerm(term);
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(vocabulary));
             em.persist(inverseExactMatch, descriptorFactory.termDescriptor(childVocabulary));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
-            Generator.addTermInVocabularyRelationship(term, vocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(inverseExactMatch, childVocabulary.getUri(), em);
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             generateRelatedInverse(term, inverseExactMatch, SKOS.EXACT_MATCH);
         });
 
@@ -584,73 +562,65 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void preUpdateSplitsExternalAndInternalTermParents() {
         final Term term = Generator.generateTermWithId(childVocabulary.getUri());
-        term.setGlossary(childVocabulary.getGlossary().getUri());
+        term.setVocabulary(childVocabulary.getUri());
         final Term internalParent = Generator.generateTermWithId(childVocabulary.getUri());
-        internalParent.setGlossary(childVocabulary.getGlossary().getUri());
+        internalParent.setVocabulary(childVocabulary.getUri());
         final Term externalParent = Generator.generateTermWithId(vocabulary.getUri());
-        externalParent.setGlossary(vocabulary.getGlossary().getUri());
+        externalParent.setVocabulary(vocabulary.getUri());
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(term));
             em.persist(internalParent, descriptorFactory.termDescriptor(internalParent));
             em.persist(externalParent, descriptorFactory.termDescriptor(externalParent));
-            Generator.addTermInVocabularyRelationship(term, childVocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(internalParent, childVocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(externalParent, vocabulary.getUri(), em);
         });
 
-        term.setParentTerms(new HashSet<>(Arrays.asList(internalParent, externalParent)));
+        term.setParentTerms(new HashSet<>(Arrays.asList(new TermInfo(internalParent), new TermInfo(externalParent))));
         sut.update(term);
 
         final Term result = em.find(Term.class, term.getUri());
-        assertThat(result.getParentTerms(), hasItem(internalParent));
-        assertThat(result.getExternalParentTerms(), hasItem(externalParent));
+        assertThat(result.getParentTerms(), hasItem(new TermInfo(internalParent)));
+        assertThat(result.getExternalParentTerms(), hasItem(new TermInfo(externalParent)));
     }
 
     @Test
     void addRootTermToVocabularySplitsExternalAndInternalTermParents() {
         final Term term = Generator.generateTermWithId(childVocabulary.getUri());
-        term.setGlossary(childVocabulary.getGlossary().getUri());
+        term.setVocabulary(childVocabulary.getUri());
         final Term externalParent = Generator.generateTermWithId(vocabulary.getUri());
-        externalParent.setGlossary(vocabulary.getGlossary().getUri());
-        transactional(() -> {
-            em.persist(externalParent, descriptorFactory.termDescriptor(externalParent));
-            Generator.addTermInVocabularyRelationship(externalParent, vocabulary.getUri(), em);
-        });
+        externalParent.setVocabulary(vocabulary.getUri());
+        transactional(() -> em.persist(externalParent, descriptorFactory.termDescriptor(externalParent)));
 
-        term.setParentTerms(Collections.singleton(externalParent));
+        term.setParentTerms(Collections.singleton(new TermInfo(externalParent)));
         sut.addRootTermToVocabulary(term, childVocabulary);
 
         final Term result = em.find(Term.class, term.getUri());
-        assertThat(result.getExternalParentTerms(), hasItem(externalParent));
+        assertThat(result.getExternalParentTerms(), hasItem(new TermInfo(externalParent)));
     }
 
     @Test
     void addChildTermSplitsExternalAndInternalTermParents() {
         final Term term = Generator.generateTermWithId(childVocabulary.getUri());
-        term.setGlossary(childVocabulary.getGlossary().getUri());
+        term.setVocabulary(childVocabulary.getUri());
         final Term internalParent = Generator.generateTermWithId(childVocabulary.getUri());
-        internalParent.setGlossary(childVocabulary.getGlossary().getUri());
+        internalParent.setVocabulary(childVocabulary.getUri());
         final Term externalParent = Generator.generateTermWithId(vocabulary.getUri());
-        externalParent.setGlossary(vocabulary.getGlossary().getUri());
+        externalParent.setVocabulary(vocabulary.getUri());
         transactional(() -> {
             em.persist(internalParent, descriptorFactory.termDescriptor(internalParent));
             em.persist(externalParent, descriptorFactory.termDescriptor(externalParent));
-            Generator.addTermInVocabularyRelationship(internalParent, childVocabulary.getUri(), em);
-            Generator.addTermInVocabularyRelationship(externalParent, vocabulary.getUri(), em);
         });
 
-        term.setParentTerms(new HashSet<>(Arrays.asList(internalParent, externalParent)));
+        term.setParentTerms(new HashSet<>(List.of(new TermInfo(internalParent), new TermInfo(externalParent))));
         sut.addChildTerm(term, internalParent);
 
         final Term result = em.find(Term.class, term.getUri());
-        assertThat(result.getParentTerms(), hasItem(internalParent));
-        assertThat(result.getExternalParentTerms(), hasItem(externalParent));
+        assertThat(result.getParentTerms(), hasItem(new TermInfo(internalParent)));
+        assertThat(result.getExternalParentTerms(), hasItem(new TermInfo(externalParent)));
     }
 
     @Test
     void setStateToDraftSetsTermStateAndUpdatesIt() {
         final Term term = generateTermWithId();
-        term.setGlossary(vocabulary.getGlossary().getUri());
+        term.setVocabulary(vocabulary.getUri());
         term.setVocabulary(vocabulary.getUri());
         transactional(() -> em.persist(term, descriptorFactory.termDescriptor(term)));
         final URI state = Generator.randomItem(Generator.TERM_STATES);
@@ -664,7 +634,7 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void setStatusDoesUpdateInCorrectContext() {
         final Term term = generateTermWithId();
-        term.setGlossary(vocabulary.getGlossary().getUri());
+        term.setVocabulary(vocabulary.getUri());
         term.setVocabulary(vocabulary.getUri());
         transactional(() -> em.persist(term, descriptorFactory.termDescriptor(term)));
         final URI state = Generator.randomItem(Generator.TERM_STATES);
@@ -675,11 +645,12 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
             try (final RepositoryConnection conn = repo.getConnection()) {
                 final ValueFactory vf = conn.getValueFactory();
                 assertTrue(conn.hasStatement(vf.createIRI(term.getUri().toString()), vf.createIRI(
-                                                     cz.cvut.kbss.termit.util.Vocabulary.s_p_ma_stav_pojmu), null, false,
+                                                     cz.cvut.kbss.termit.util.Vocabulary.s_p_has_state_of_term), null, false,
                                              vf.createIRI(vocabulary.getUri().toString())));
                 assertEquals(1,
                              conn.getStatements(vf.createIRI(term.getUri().toString()), vf.createIRI(
-                                     cz.cvut.kbss.termit.util.Vocabulary.s_p_ma_stav_pojmu), null).stream().count());
+                                         cz.cvut.kbss.termit.util.Vocabulary.s_p_has_state_of_term), null).stream()
+                                 .count());
             }
         });
     }
@@ -691,10 +662,10 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void removingExactMatchFromInverseSideWorksInTransaction() {
         enableRdfsInference(em);
         final Term term = generateTermWithId();
-        term.setGlossary(vocabulary.getGlossary().getUri());
+        term.setVocabulary(vocabulary.getUri());
         term.setVocabulary(vocabulary.getUri());
         final Term exactMatch = generateTermWithId();
-        exactMatch.setGlossary(childVocabulary.getGlossary().getUri());
+        exactMatch.setVocabulary(childVocabulary.getUri());
         exactMatch.setVocabulary(childVocabulary.getUri());
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(term));
@@ -751,16 +722,16 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     @Test
     void removeRemovesHasTopConceptReferenceToRemovedTerm() {
         final Term term = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(term);
+        vocabulary.addRootTerm(term);
         transactional(() -> {
             em.persist(term, descriptorFactory.termDescriptor(term));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
         });
 
         sut.remove(term);
         assertNull(em.find(Term.class, term.getUri()));
         assertFalse(em.createNativeQuery("ASK { ?glossary ?hasTopConcept ?term . }", Boolean.class)
-                      .setParameter("glossary", vocabulary.getGlossary())
+                      .setParameter("glossary", vocabulary)
                       .setParameter("hasTopConcept", URI.create(SKOS.HAS_TOP_CONCEPT))
                       .setParameter("term", term).getSingleResult());
     }
@@ -769,16 +740,16 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void removeThrowsAssetRemovalExceptionWhenTermIsReferencedByConfirmedOccurrences() {
         enableRdfsInference(em);
         final Term toRemove = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(toRemove);
+        vocabulary.addRootTerm(toRemove);
         final Term referencing = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(referencing);
+        vocabulary.addRootTerm(referencing);
         final TermOccurrence occ = new TermDefinitionalOccurrence(toRemove.getUri(),
                                                                   new DefinitionalOccurrenceTarget(referencing));
         occ.getTarget().setSelectors(Set.of(new TextPositionSelector(0, 10)));
         transactional(() -> {
             em.persist(toRemove, descriptorFactory.termDescriptor(toRemove));
             em.persist(referencing, descriptorFactory.termDescriptor(referencing));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             em.persist(occ);
             em.persist(occ.getTarget());
         });
@@ -791,17 +762,17 @@ class TermRepositoryServiceTest extends BaseServiceTestRunner {
     void removeRemoveTermWhenItsOccurrencesAreOnlySuggested() {
         enableRdfsInference(em);
         final Term toRemove = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(toRemove);
+        vocabulary.addRootTerm(toRemove);
         final Term referencing = Generator.generateTermWithId(vocabulary.getUri());
-        vocabulary.getGlossary().addRootTerm(referencing);
+        vocabulary.addRootTerm(referencing);
         final TermOccurrence occ = new TermDefinitionalOccurrence(toRemove.getUri(),
                                                                   new DefinitionalOccurrenceTarget(referencing));
-        occ.addType(cz.cvut.kbss.termit.util.Vocabulary.s_c_navrzeny_vyskyt_termu);
+        occ.addType(cz.cvut.kbss.termit.util.Vocabulary.s_c_suggested_term_occurrence);
         occ.getTarget().setSelectors(Set.of(new TextPositionSelector(0, 10)));
         transactional(() -> {
             em.persist(toRemove, descriptorFactory.termDescriptor(toRemove));
             em.persist(referencing, descriptorFactory.termDescriptor(referencing));
-            em.merge(vocabulary.getGlossary(), descriptorFactory.glossaryDescriptor(vocabulary));
+            em.merge(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
             em.persist(occ);
             em.persist(occ.getTarget());
         });
